<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutSintoma"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardview_vertical_margin"
    android:layout_marginTop="@dimen/cardview_vertical_margin"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:ignore="UselessParent">

        <ImageView
           android:id="@+id/note_image"
           android:layout_width="32dp"
           android:layout_height="32dp"
           android:background="?attr/selectableItemBackgroundBorderless"
           android:src="@drawable/ic_emoji_choro_continuo_24dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7">

            <TextView
                android:id="@+id/symptom_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choro_cont_nuo" />

        </LinearLayout>

        <TextView
            android:id="@+id/symptom_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/_10_00" />

    </LinearLayout>

</LinearLayout>
